Fixed modal close on esc, previewlist on small widths.

--- a/src/less/modules/previewlist.less
+++ b/src/less/modules/previewlist.less
@@ -1,7 +1,12 @@
 
 .previewlist {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+
+  .atMedium({
+    grid-template-columns: 1fr 1fr;
+  });
+
   grid-gap: @previewlist-grid-gap;
 
   &-item {
